# guzei

./: Makefile.am  README.md  configure.ac  guzei.desktop  guzei.desktop.in
Guzei@zilinec.m@gmail.com/: application.js  downloader.js  extension.js  metadata.json  providers.js
src/: #gui.glade#  Makefile.am  Makefilee  glade-resources.c  gresources.xml  gui.glade  guzei  main.c  me.zilinec.guzei.gschema.xml
